Moved Populated File System tests to common assembly to share with real file system tests.

--- a/memory/fs4net.Memory.Test/fs4net.Memory.Test.csproj
+++ b/memory/fs4net.Memory.Test/fs4net.Memory.Test.csproj
@@ -54,10 +54,13 @@
     <Compile Include="Directory\LastModifiedFixture.cs" />
     <Compile Include="File\ExistsFixture.cs" />
     <Compile Include="File\LastModifiedFixture.cs" />
-    <Compile Include="PopulatedFileSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\commontest\fs4net.CommonTest\fs4net.CommonTest.csproj">
+      <Project>{B7D15700-67FD-4FAB-97D1-7A5DA8C5C079}</Project>
+      <Name>fs4net.CommonTest</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\framework\fs4net.Framework\fs4net.Framework.csproj">
       <Project>{1050CD0E-F451-40F6-BF70-1B91AEC5482D}</Project>
       <Name>fs4net.Framework</Name>
