--- a/commontest/fs4net.CommonTest/fs4net.CommonTest.csproj
+++ b/commontest/fs4net.CommonTest/fs4net.CommonTest.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{84F865D5-22B1-4B95-BE4A-EAE663BCB527}</ProjectGuid>
+    <ProjectGuid>{B7D15700-67FD-4FAB-97D1-7A5DA8C5C079}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>fs4net.Memory</RootNamespace>
-    <AssemblyName>fs4net.Memory</AssemblyName>
+    <RootNamespace>fs4net.CommonTest</RootNamespace>
+    <AssemblyName>fs4net.CommonTest</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -21,7 +21,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -32,25 +31,27 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework, Version=2.5.2.9222, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
-    <Reference Include="System.Xml.Linq">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Data.DataSetExtensions">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
     <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Node\FileNode.cs" />
-    <Compile Include="Node\FileSystemNode.cs" />
-    <Compile Include="MemoryFileSystem.cs" />
-    <Compile Include="Node\FolderNode.cs" />
+    <Compile Include="Builder\FileSystemBuilder.cs" />
+    <Compile Include="Builder\FileSystemItemBuilder.cs" />
+    <Compile Include="Builder\RootedDirectoryBuilder.cs" />
+    <Compile Include="Builder\RootedFileBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Template\Directory\ExistsFixture.cs" />
+    <Compile Include="Template\Directory\LastModifiedFixture.cs" />
+    <Compile Include="Template\File\ExistsFixture.cs" />
+    <Compile Include="Template\File\LastModifiedFixture.cs" />
+    <Compile Include="Template\PopulatedFileSystem.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\framework\fs4net.Framework\fs4net.Framework.csproj">
