Test real file system using Populated File System templates.

--- a/framework/fs4net.Framework.Test/fs4net.Framework.Test.csproj
+++ b/framework/fs4net.Framework.Test/fs4net.Framework.Test.csproj
@@ -49,11 +49,15 @@
     <Compile Include="CreateRelativeFileFixture.cs" />
     <Compile Include="CreateRootedDirectoryFixture.cs" />
     <Compile Include="CreateRootedFileFixture.cs" />
+    <Compile Include="Directory\ExistsFixture.cs" />
+    <Compile Include="Directory\LastModifiedFixture.cs" />
     <Compile Include="DriveFixture.cs" />
     <Compile Include="EnumerableUtils.cs" />
     <Compile Include="FileNameFixture.cs" />
     <Compile Include="FileNameOfRelativeFileFixture.cs" />
     <Compile Include="FileNameOfRootedFileFixture.cs" />
+    <Compile Include="File\ExistsFixture.cs" />
+    <Compile Include="File\LastModifiedFixture.cs" />
     <Compile Include="MockFileSystem.cs" />
     <Compile Include="PathCombiningOperatorsFixture.cs" />
     <Compile Include="RelativeCanonicalPathAsStringFixture.cs" />
@@ -65,6 +69,10 @@
     <Compile Include="SystemIOFixture.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\commontest\fs4net.CommonTest\fs4net.CommonTest.csproj">
+      <Project>{B7D15700-67FD-4FAB-97D1-7A5DA8C5C079}</Project>
+      <Name>fs4net.CommonTest</Name>
+    </ProjectReference>
     <ProjectReference Include="..\fs4net.Framework\fs4net.Framework.csproj">
       <Project>{1050CD0E-F451-40F6-BF70-1B91AEC5482D}</Project>
       <Name>fs4net.Framework</Name>
