RelativeFrom, tests and code. Code cleanup. MoveTo test stub.

--- a/framework/fs4net.Framework.Test/fs4net.Framework.Test.csproj
+++ b/framework/fs4net.Framework.Test/fs4net.Framework.Test.csproj
@@ -61,6 +61,7 @@
     <Compile Include="MockFileSystem.cs" />
     <Compile Include="PathCombiningOperatorsFixture.cs" />
     <Compile Include="RelativeCanonicalPathAsStringFixture.cs" />
+    <Compile Include="RelativeFromFixture.cs" />
     <Compile Include="RelativePathAsStringFixture.cs" />
     <Compile Include="RootedCanonicalPathAsStringFixture.cs" />
     <Compile Include="RootedFileSystemItemFixture.cs" />
