--- a/commontest/fs4net.CommonTest/fs4net.CommonTest.csproj
+++ b/commontest/fs4net.CommonTest/fs4net.CommonTest.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Template\Directory\ExistsFixture.cs" />
     <Compile Include="Template\Directory\LastModifiedFixture.cs" />
+    <Compile Include="Template\Directory\MoveToFixture.cs" />
     <Compile Include="Template\File\ExistsFixture.cs" />
     <Compile Include="Template\File\LastModifiedFixture.cs" />
     <Compile Include="Template\PopulatedFileSystem.cs" />
