Populated tests for Create Directory. Had to explicitly specify what drives exist in the MemoryFileSystem.

--- a/framework/fs4net.Framework.Test/fs4net.Framework.Test.csproj
+++ b/framework/fs4net.Framework.Test/fs4net.Framework.Test.csproj
@@ -49,6 +49,7 @@
     <Compile Include="CreateRelativeFileFixture.cs" />
     <Compile Include="CreateRootedDirectoryFixture.cs" />
     <Compile Include="CreateRootedFileFixture.cs" />
+    <Compile Include="Directory\CreateFixture.cs" />
     <Compile Include="Directory\ExistsFixture.cs" />
     <Compile Include="Directory\LastModifiedFixture.cs" />
     <Compile Include="Directory\MoveToFixture.cs" />
