--- a/commontest/fs4net.CommonTest/fs4net.CommonTest.csproj
+++ b/commontest/fs4net.CommonTest/fs4net.CommonTest.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Builder\RootedFileBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Template\Directory\CreateFixture.cs" />
+    <Compile Include="Template\Directory\DeleteRecursivelyFixture.cs" />
     <Compile Include="Template\Directory\ExistsFixture.cs" />
     <Compile Include="Template\Directory\LastModifiedFixture.cs" />
     <Compile Include="Template\Directory\MoveToFixture.cs" />
