--- a/framework/fs4net.Framework.Test/fs4net.Framework.Test.csproj
+++ b/framework/fs4net.Framework.Test/fs4net.Framework.Test.csproj
@@ -50,6 +50,7 @@
     <Compile Include="CreateRootedDirectoryFixture.cs" />
     <Compile Include="CreateRootedFileFixture.cs" />
     <Compile Include="Directory\CreateFixture.cs" />
+    <Compile Include="Directory\DeleteIfEmptyFixture.cs" />
     <Compile Include="Directory\DeleteRecursivelyFixture.cs" />
     <Compile Include="Directory\ExistsFixture.cs" />
     <Compile Include="Directory\LastModifiedFixture.cs" />
