--- a/commontest/fs4net.CommonTest/fs4net.CommonTest.csproj
+++ b/commontest/fs4net.CommonTest/fs4net.CommonTest.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Template\Directory\ExistsFixture.cs" />
     <Compile Include="Template\Directory\LastModifiedFixture.cs" />
     <Compile Include="Template\Directory\MoveToFixture.cs" />
+    <Compile Include="Template\Directory\TryDeleteIfEmptyFixture.cs" />
     <Compile Include="Template\Directory\TryDeleteRecursivelyFixture.cs" />
     <Compile Include="Template\File\ExistsFixture.cs" />
     <Compile Include="Template\File\LastModifiedFixture.cs" />
