--- a/memory/fs4net.Memory.Test/fs4net.Memory.Test.csproj
+++ b/memory/fs4net.Memory.Test/fs4net.Memory.Test.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Directory\TryDeleteIfEmptyFixture.cs" />
     <Compile Include="Directory\TryDeleteRecursivelyFixture.cs" />
     <Compile Include="FileSystemFactory.cs" />
+    <Compile Include="File\DeleteFixture.cs" />
     <Compile Include="File\ExistsFixture.cs" />
     <Compile Include="File\LastModifiedFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
