--- a/framework/fs4net.Framework.Test/fs4net.Framework.Test.csproj
+++ b/framework/fs4net.Framework.Test/fs4net.Framework.Test.csproj
@@ -62,6 +62,7 @@
     <Compile Include="FileNameFixture.cs" />
     <Compile Include="FileNameOfRelativeFileFixture.cs" />
     <Compile Include="FileNameOfRootedFileFixture.cs" />
+    <Compile Include="File\DeleteFixture.cs" />
     <Compile Include="File\ExistsFixture.cs" />
     <Compile Include="File\LastModifiedFixture.cs" />
     <Compile Include="MockFileSystem.cs" />
