Populated tests for Try Delete File.

--- a/memory/fs4net.Memory.Test/fs4net.Memory.Test.csproj
+++ b/memory/fs4net.Memory.Test/fs4net.Memory.Test.csproj
@@ -62,6 +62,7 @@
     <Compile Include="File\DeleteFixture.cs" />
     <Compile Include="File\ExistsFixture.cs" />
     <Compile Include="File\LastModifiedFixture.cs" />
+    <Compile Include="File\TryDeleteFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
