--- a/commontest/fs4net.CommonTest/fs4net.CommonTest.csproj
+++ b/commontest/fs4net.CommonTest/fs4net.CommonTest.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Template\File\DeleteFixture.cs" />
     <Compile Include="Template\File\ExistsFixture.cs" />
     <Compile Include="Template\File\LastModifiedFixture.cs" />
+    <Compile Include="Template\File\TryDeleteFixture.cs" />
     <Compile Include="Template\PopulatedFileSystem.cs" />
   </ItemGroup>
   <ItemGroup>
