Populated tests for Read and Write Stream.

--- a/commontest/fs4net.CommonTest/fs4net.CommonTest.csproj
+++ b/commontest/fs4net.CommonTest/fs4net.CommonTest.csproj
@@ -55,6 +55,8 @@
     <Compile Include="Template\Directory\MoveToFixture.cs" />
     <Compile Include="Template\Directory\TryDeleteIfEmptyFixture.cs" />
     <Compile Include="Template\Directory\TryDeleteRecursivelyFixture.cs" />
+    <Compile Include="Template\File\CreateReadStreamFixture.cs" />
+    <Compile Include="Template\File\CreateWriteStreamFixture.cs" />
     <Compile Include="Template\File\DeleteFixture.cs" />
     <Compile Include="Template\File\ExistsFixture.cs" />
     <Compile Include="Template\File\LastModifiedFixture.cs" />
