--- a/framework/fs4net.Framework.Test/fs4net.Framework.Test.csproj
+++ b/framework/fs4net.Framework.Test/fs4net.Framework.Test.csproj
@@ -77,6 +77,7 @@
     <Compile Include="RelativeFromFixture.cs" />
     <Compile Include="RelativePathAsStringFixture.cs" />
     <Compile Include="RootedCanonicalPathAsStringFixture.cs" />
+    <Compile Include="RootedDirectoryEqualityFixture.cs" />
     <Compile Include="RootedFileSystemItemFixture.cs" />
     <Compile Include="RootedPathAsStringFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
