--- a/framework/fs4net.Framework.Test/fs4net.Framework.Test.csproj
+++ b/framework/fs4net.Framework.Test/fs4net.Framework.Test.csproj
@@ -75,6 +75,7 @@
     <Compile Include="PathCombiningOperatorsFixture.cs" />
     <Compile Include="RelativeCanonicalPathAsStringFixture.cs" />
     <Compile Include="RelativeDirectoryEqualityFixture.cs" />
+    <Compile Include="RelativeFileEqualityFixture.cs" />
     <Compile Include="RelativeFromFixture.cs" />
     <Compile Include="RelativePathAsStringFixture.cs" />
     <Compile Include="RootedCanonicalPathAsStringFixture.cs" />
