Equality tests for FileName.

--- a/framework/fs4net.Framework.Test/fs4net.Framework.Test.csproj
+++ b/framework/fs4net.Framework.Test/fs4net.Framework.Test.csproj
@@ -60,6 +60,7 @@
     <Compile Include="DriveEqualityFixture.cs" />
     <Compile Include="DriveFixture.cs" />
     <Compile Include="EnumerableUtils.cs" />
+    <Compile Include="FileNameEqualityFixture.cs" />
     <Compile Include="FileNameFixture.cs" />
     <Compile Include="FileNameOfRelativeFileFixture.cs" />
     <Compile Include="FileNameOfRootedFileFixture.cs" />
