--- a/testtemplates/fs4net.TestTemplates/fs4net.TestTemplates.csproj
+++ b/testtemplates/fs4net.TestTemplates/fs4net.TestTemplates.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{B7D15700-67FD-4FAB-97D1-7A5DA8C5C079}</ProjectGuid>
+    <ProjectGuid>{61F93391-D538-405C-B03E-0E3C3602F611}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>fs4net.CommonTest</RootNamespace>
-    <AssemblyName>fs4net.CommonTest</AssemblyName>
+    <RootNamespace>fs4net.TestTemplates</RootNamespace>
+    <AssemblyName>fs4net.TestTemplates</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -42,30 +42,30 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Builder\FileSystemBuilder.cs" />
-    <Compile Include="Builder\FileSystemItemBuilder.cs" />
-    <Compile Include="Builder\RootedDirectoryBuilder.cs" />
-    <Compile Include="Builder\RootedFileBuilder.cs" />
+    <Compile Include="Directory\CreateFixture.cs" />
+    <Compile Include="Directory\DeleteIfEmptyFixture.cs" />
+    <Compile Include="Directory\DeleteRecursivelyFixture.cs" />
+    <Compile Include="Directory\ExistsFixture.cs" />
+    <Compile Include="Directory\LastModifiedFixture.cs" />
+    <Compile Include="Directory\MoveToFixture.cs" />
+    <Compile Include="Directory\TryDeleteIfEmptyFixture.cs" />
+    <Compile Include="Directory\TryDeleteRecursivelyFixture.cs" />
+    <Compile Include="File\CreateAppendStreamFixture.cs" />
+    <Compile Include="File\CreateModifyStreamFixture.cs" />
+    <Compile Include="File\CreateReadStreamFixture.cs" />
+    <Compile Include="File\CreateWriteStreamFixture.cs" />
+    <Compile Include="File\DeleteFixture.cs" />
+    <Compile Include="File\ExistsFixture.cs" />
+    <Compile Include="File\LastModifiedFixture.cs" />
+    <Compile Include="File\TryDeleteFixture.cs" />
+    <Compile Include="PopulatedFileSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Template\Directory\CreateFixture.cs" />
-    <Compile Include="Template\Directory\DeleteIfEmptyFixture.cs" />
-    <Compile Include="Template\Directory\DeleteRecursivelyFixture.cs" />
-    <Compile Include="Template\Directory\ExistsFixture.cs" />
-    <Compile Include="Template\Directory\LastModifiedFixture.cs" />
-    <Compile Include="Template\Directory\MoveToFixture.cs" />
-    <Compile Include="Template\Directory\TryDeleteIfEmptyFixture.cs" />
-    <Compile Include="Template\Directory\TryDeleteRecursivelyFixture.cs" />
-    <Compile Include="Template\File\CreateAppendStreamFixture.cs" />
-    <Compile Include="Template\File\CreateModifyStreamFixture.cs" />
-    <Compile Include="Template\File\CreateReadStreamFixture.cs" />
-    <Compile Include="Template\File\CreateWriteStreamFixture.cs" />
-    <Compile Include="Template\File\DeleteFixture.cs" />
-    <Compile Include="Template\File\ExistsFixture.cs" />
-    <Compile Include="Template\File\LastModifiedFixture.cs" />
-    <Compile Include="Template\File\TryDeleteFixture.cs" />
-    <Compile Include="Template\PopulatedFileSystem.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\builder\fs4net.Builder\fs4net.Builder.csproj">
+      <Project>{2D20D6D8-8902-4843-B4FA-2CDB6D3942F4}</Project>
+      <Name>fs4net.Builder</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\framework\fs4net.Framework\fs4net.Framework.csproj">
       <Project>{1050CD0E-F451-40F6-BF70-1B91AEC5482D}</Project>
       <Name>fs4net.Framework</Name>
