Added populated tests for move file.

--- a/framework/fs4net.Framework.Test/fs4net.Framework.Test.csproj
+++ b/framework/fs4net.Framework.Test/fs4net.Framework.Test.csproj
@@ -73,6 +73,7 @@
     <Compile Include="File\ExistsFixture.cs" />
     <Compile Include="File\LastAccessedFixture.cs" />
     <Compile Include="File\LastModifiedFixture.cs" />
+    <Compile Include="File\MoveToFixture.cs" />
     <Compile Include="File\TryDeleteFixture.cs" />
     <Compile Include="MockFileSystem.cs" />
     <Compile Include="Combine\PathCombiningOperatorsFixture.cs" />
