--- a/memory/fs4net.Memory.Test/fs4net.Memory.Test.csproj
+++ b/memory/fs4net.Memory.Test/fs4net.Memory.Test.csproj
@@ -61,6 +61,7 @@
     <Compile Include="File\ExistsFixture.cs" />
     <Compile Include="File\LastAccessedFixture.cs" />
     <Compile Include="File\LastModifiedFixture.cs" />
+    <Compile Include="File\MoveToFixture.cs" />
     <Compile Include="File\TryDeleteFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
