--- a/testtemplates/fs4net.TestTemplates/fs4net.TestTemplates.csproj
+++ b/testtemplates/fs4net.TestTemplates/fs4net.TestTemplates.csproj
@@ -59,6 +59,7 @@
     <Compile Include="File\ExistsFixture.cs" />
     <Compile Include="File\LastAccessedFixture.cs" />
     <Compile Include="File\LastModifiedFixture.cs" />
+    <Compile Include="File\MoveToFixture.cs" />
     <Compile Include="File\TryDeleteFixture.cs" />
     <Compile Include="PopulatedFileSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
