--- a/memory/fs4net.Memory.Test/fs4net.Memory.Test.csproj
+++ b/memory/fs4net.Memory.Test/fs4net.Memory.Test.csproj
@@ -48,7 +48,7 @@
     <Compile Include="Directory\DeleteRecursivelyFixture.cs" />
     <Compile Include="Directory\ExistsFixture.cs" />
     <Compile Include="Directory\LastAccessTimeFixture.cs" />
-    <Compile Include="Directory\LastModifiedFixture.cs" />
+    <Compile Include="Directory\LastWriteTimeFixture.cs" />
     <Compile Include="Directory\MoveToFixture.cs" />
     <Compile Include="Directory\TryDeleteIfEmptyFixture.cs" />
     <Compile Include="Directory\TryDeleteRecursivelyFixture.cs" />
@@ -60,7 +60,7 @@
     <Compile Include="File\DeleteFixture.cs" />
     <Compile Include="File\ExistsFixture.cs" />
     <Compile Include="File\LastAccessTimeFixture.cs" />
-    <Compile Include="File\LastModifiedFixture.cs" />
+    <Compile Include="File\LastWriteTimeFixture.cs" />
     <Compile Include="File\MoveToFixture.cs" />
     <Compile Include="File\TryDeleteFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
