--- a/framework/fs4net.Framework/fs4net.Framework.csproj
+++ b/framework/fs4net.Framework/fs4net.Framework.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Impl\DateTimeExtensions.cs" />
     <Compile Include="Impl\DriveParser.cs" />
     <Compile Include="Impl\FilenameParser.cs" />
+    <Compile Include="Impl\FolderUtils.cs" />
     <Compile Include="NullLogger.cs" />
     <Compile Include="Impl\StringExtensions.cs" />
     <Compile Include="Impl\ThrowHelper.cs" />
@@ -61,6 +62,7 @@
     <Compile Include="IRootedFileSystemItem.cs" />
     <Compile Include="InvalidPathException.cs" />
     <Compile Include="NonRootedPathException.cs" />
+    <Compile Include="Impl\PathUtils.cs" />
     <Compile Include="PathWashers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RelativeDirectory.cs" />
@@ -68,6 +70,7 @@
     <Compile Include="RootedCanonicalPath.cs" />
     <Compile Include="RootedDirectory.cs" />
     <Compile Include="RootedFile.cs" />
+    <Compile Include="Utils\RootedFileUtilities.cs" />
     <Compile Include="RootedPathException.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
