Tests for Parent(). Bug fix for when concatenating empty paths.

--- a/framework/fs4net.Framework.Test/fs4net.Framework.Test.csproj
+++ b/framework/fs4net.Framework.Test/fs4net.Framework.Test.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Creation\CreateRelativeFileFixture.cs" />
     <Compile Include="Creation\CreateRootedDirectoryFixture.cs" />
     <Compile Include="Creation\CreateRootedFileFixture.cs" />
+    <Compile Include="Creation\ParentFixture.cs" />
     <Compile Include="Directory\CreateFixture.cs" />
     <Compile Include="Directory\DeleteIfEmptyFixture.cs" />
     <Compile Include="Directory\DeleteRecursivelyFixture.cs" />
@@ -58,6 +59,7 @@
     <Compile Include="Directory\MoveToFixture.cs" />
     <Compile Include="Directory\TryDeleteIfEmptyFixture.cs" />
     <Compile Include="Directory\TryDeleteRecursivelyFixture.cs" />
+    <Compile Include="EnumerableUtils.cs" />
     <Compile Include="Equality\DriveEqualityFixture.cs" />
     <Compile Include="DriveFixture.cs" />
     <Compile Include="Equality\FileNameEqualityFixture.cs" />
