--- a/framework/fs4net.Framework.Test/fs4net.Framework.Test.csproj
+++ b/framework/fs4net.Framework.Test/fs4net.Framework.Test.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Creation\FileNameOfRelativeFileFixture.cs" />
     <Compile Include="Creation\FileNameOfRootedFileFixture.cs" />
     <Compile Include="FileSystemFactory.cs" />
+    <Compile Include="File\CopyToAndOverwriteFixture.cs" />
     <Compile Include="File\CopyToFixture.cs" />
     <Compile Include="File\CreateAppendStreamFixture.cs" />
     <Compile Include="File\CreateModifyStreamFixture.cs" />
