--- a/testtemplates/fs4net.TestTemplates/fs4net.TestTemplates.csproj
+++ b/testtemplates/fs4net.TestTemplates/fs4net.TestTemplates.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Directory\MoveToFixture.cs" />
     <Compile Include="Directory\TryDeleteIfEmptyFixture.cs" />
     <Compile Include="Directory\TryDeleteRecursivelyFixture.cs" />
+    <Compile Include="File\CopyToAndOverwriteFixture.cs" />
     <Compile Include="File\CopyToFixture.cs" />
     <Compile Include="File\CreateAppendStreamFixture.cs" />
     <Compile Include="File\CreateModifyStreamFixture.cs" />
