--- a/framework/fs4net.Framework.Test/fs4net.Framework.Test.csproj
+++ b/framework/fs4net.Framework.Test/fs4net.Framework.Test.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Creation\CreateRelativeFileFixture.cs" />
     <Compile Include="Creation\CreateRootedDirectoryFixture.cs" />
     <Compile Include="Creation\CreateRootedFileFixture.cs" />
+    <Compile Include="Creation\CreateSpecialFolderDirectory.cs" />
     <Compile Include="Creation\LeafFolderFixture.cs" />
     <Compile Include="Creation\ParentFixture.cs" />
     <Compile Include="Directory\CreateFixture.cs" />
