--- a/framework/fs4net.Framework.Test/fs4net.Framework.Test.csproj
+++ b/framework/fs4net.Framework.Test/fs4net.Framework.Test.csproj
@@ -86,6 +86,7 @@
     <Compile Include="File\LastAccessTimeFixture.cs" />
     <Compile Include="File\LastWriteTimeFixture.cs" />
     <Compile Include="File\MoveToFixture.cs" />
+    <Compile Include="File\SizeFixture.cs" />
     <Compile Include="File\TryDeleteFixture.cs" />
     <Compile Include="MockFileSystem.cs" />
     <Compile Include="Combine\PathCombiningOperatorsFixture.cs" />
