--- a/testtemplates/fs4net.TestTemplates/fs4net.TestTemplates.csproj
+++ b/testtemplates/fs4net.TestTemplates/fs4net.TestTemplates.csproj
@@ -70,6 +70,7 @@
     <Compile Include="File\LastAccessTimeFixture.cs" />
     <Compile Include="File\LastWriteTimeFixture.cs" />
     <Compile Include="File\MoveToFixture.cs" />
+    <Compile Include="File\SizeFixture.cs" />
     <Compile Include="File\TryDeleteFixture.cs" />
     <Compile Include="PopulatedFileSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
