--- a/framework/fs4net.Framework.Test/fs4net.Framework.Test.csproj
+++ b/framework/fs4net.Framework.Test/fs4net.Framework.Test.csproj
@@ -47,13 +47,14 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Creation\AllDrivesFixture.cs" />
     <Compile Include="Creation\CreateDriveFixture.cs" />
     <Compile Include="Creation\CreateFileNameFixture.cs" />
     <Compile Include="Creation\CreateRelativeDirectoryFixture.cs" />
     <Compile Include="Creation\CreateRelativeFileFixture.cs" />
     <Compile Include="Creation\CreateRootedDirectoryFixture.cs" />
     <Compile Include="Creation\CreateRootedFileFixture.cs" />
-    <Compile Include="Creation\CreateSpecialFolderDirectory.cs" />
+    <Compile Include="Creation\CreateSpecialFolderDirectoryFixture.cs" />
     <Compile Include="Creation\LeafFolderFixture.cs" />
     <Compile Include="Creation\ParentFixture.cs" />
     <Compile Include="Directory\CreateFixture.cs" />
