--- a/testtemplates/fs4net.TestTemplates/fs4net.TestTemplates.csproj
+++ b/testtemplates/fs4net.TestTemplates/fs4net.TestTemplates.csproj
@@ -47,7 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssertLogger.cs" />
-    <Compile Include="Creation\CreateSpecialFolderDirectory.cs" />
+    <Compile Include="Creation\AllDrivesFixture.cs" />
+    <Compile Include="Creation\CreateSpecialFolderDirectoryFixture.cs" />
     <Compile Include="Directory\CreateFixture.cs" />
     <Compile Include="Directory\DeleteIfEmptyFixture.cs" />
     <Compile Include="Directory\DeleteRecursivelyFixture.cs" />
